@@ -18,14 +18,14 @@ import java.util.Date;
 @Component
 public class DataLoader implements CommandLineRunner {
 
-    private InstructorRepository instructorRepository;
+    private final InstructorRepository instructorRepository;
 
-    private StudentRepository studentRepository;
+    private final StudentRepository studentRepository;
 
 
-    private SubjectRepository subjectRepository;
+    private final SubjectRepository subjectRepository;
 
-    private TopicRepository topicRepository;
+    private final TopicRepository topicRepository;
 
 
 //    private TopicRepository
@@ -45,43 +45,43 @@ public class DataLoader implements CommandLineRunner {
     }
 
     @Override
-    public void run(String... args)  {
+    public void run(String... args) {
         loadData();
     }
 
     private void loadData() {
         BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();
 //        this.instructorRepository.deleteAll();
-        if(this.instructorRepository.findAll().isEmpty()) {
+        if (this.instructorRepository.findAll().isEmpty()) {
             InstructorEntity instructorEntity = new InstructorEntity("jhon", "John", "Doe", "vodro@gmail.com", encoder.encode("123"), "0122", new Date(), 0, "I am new to spring boot");
             this.instructorRepository.save(instructorEntity);
         }
 
 //        this.studentRepository.deleteAll();
-        if(this.studentRepository.findAll().isEmpty()) {
+        if (this.studentRepository.findAll().isEmpty()) {
             StudentEntity studentEntity = new StudentEntity("amir", "Amir", "ali", "amir@gmail.com", encoder.encode("123"), "0175655552", new Date(), Level.ELEVEN);
             this.studentRepository.save(studentEntity);
         }
 
-        if(this.subjectRepository.findAll().isEmpty()){
+        if (this.subjectRepository.findAll().isEmpty()) {
 //            Subject su = new Subject()
 //            System.out.println("new subject created");
 
-            SubjectEntity phy =  new SubjectEntity(new Long(2), "Physics" );
-            phy =  this.subjectRepository.save(phy);
+            SubjectEntity phy = new SubjectEntity(Long.valueOf(2), "Physics");
+            phy = this.subjectRepository.save(phy);
 
-            SubjectEntity math = new SubjectEntity(new Long(1), "Math" );
+            SubjectEntity math = new SubjectEntity(Long.valueOf(1), "Math");
             math = this.subjectRepository.save(math);
 
-            TopicEntity phy_vector = new TopicEntity(new Long(1), phy, "Vector");
+            TopicEntity phy_vector = new TopicEntity(Long.valueOf(1), phy, "Vector");
             this.topicRepository.save(phy_vector);
-            TopicEntity phy_thermo = new TopicEntity(new Long(2), phy, "Thermo");
+            TopicEntity phy_thermo = new TopicEntity(Long.valueOf(2), phy, "Thermo");
             this.topicRepository.save(phy_thermo);
 
-            TopicEntity math_algebra = new TopicEntity(new Long(4), math, "Algebra");
+            TopicEntity math_algebra = new TopicEntity(Long.valueOf(4), math, "Algebra");
             this.topicRepository.save(math_algebra);
 
-            TopicEntity math_geometry = new TopicEntity(new Long(5), math, "Geometry");
+            TopicEntity math_geometry = new TopicEntity(Long.valueOf(5), math, "Geometry");
             this.topicRepository.save(math_geometry);
 
         }
